[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "docklib"
dynamic = ["version"]
description = "Python module intended to assist IT administrators with manipulation of the macOS Dock."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Elliot Jordan", email = "elliot@elliotjordan.com"}]
requires-python = ">=3.9"
dependencies = [
    "pyobjc-framework-Cocoa",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/homebysix/docklib"
Issues = "https://github.com/homebysix/docklib/issues"
Changelog = "https://github.com/homebysix/docklib/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=22.0",
    "coverage[toml]>=6.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.20",
]

[tool.setuptools]
packages = ["docklib"]

[tool.setuptools.dynamic]
version = {attr = "docklib.__version__"}

[tool.black]
line-length = 88

[tool.coverage.run]
source = ["docklib"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
